# Saliency

./: CMakeLists.txt  main.cpp  test.cpp
include/: RGB2HSI.h  SLIC.h
source/: CMakeLists.txt  RGB2HSI.cpp
